manifests/staging/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: odoo-stg
  labels:
    name: odoo
