manifests/staging/odoo.yaml
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: odoo-web-data
#   labels:
#     type: local
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 5Gi
#   accessModes:
#     - ReadWriteMany
#   hostPath:
#     path: "/data/volume/odoo-web-data"
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: odoo-addons-data
#   labels:
#     type: local
# spec:
#   storageClassName: manual
#   capacity:
#     storage: 5Gi
#   accessModes:
#     - ReadWriteMany
#   hostPath:
#     path: "/data/volume/odoo-addons-data"
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: odoo-web-data-claim
#   namespace: odoo-stg
# spec:
#   volumeName: odoo-web-data
#   storageClassName: manual
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 5Gi
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: odoo-addons-data-claim
#   namespace: odoo-stg
# spec:
#   volumeName: odoo-addons-data
#   storageClassName: manual
#   accessModes:
#     - ReadWriteMany
#   resources:
#     requests:
#       storage: 5Gi
# ---
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: odoo-config
#   namespace: odoo-stg
#   labels:
#     app: odoo-stg
# data:
#   HOST: postgres
#   PORT: "5432"
#   USER: root
#   PASSWORD: gladiators88
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
  namespace: odoo-stg
  labels:
    app: odoo-stg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-stg
  template:
    metadata:
      labels:
        app: odoo-stg
    spec:
      # securityContext:
      #   runAsUser: 101
      #   runAsGroup: 101
      #   fsGroup: 101
      # initContainers:
      #   - name: set-vol-permission
      #     image: busybox
      #     command: ["sh", "-c", "chown -R 101:101 /var/lib/odoo /mnt/extra-addons"]
      #     volumeMounts:
      #       - mountPath: /var/lib/odoo
      #         name: odoo-web
      #       - mountPath: /mnt/extra-addons
      #         name: odoo-addons
      containers:
        - name: odoo
          image: rjhaikal/odoo:16v1.1.6-rc
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
